# Automated-Insurance-Claim-Approval-Engine

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md
scripts/: run_demo.py  seed_knowledge_base.py
src/claim_engine/: __init__.py  __version__.py  knowledge_base.py  logging_utils.py
src/claim_engine/compliance/: __init__.py  hipaa_redactor.py
src/claim_engine/config/: __init__.py  settings.py
src/claim_engine/decisioning/: __init__.py  approval_engine.py  rules_engine.py
src/claim_engine/ingestion/: __init__.py  data_store.py
src/claim_engine/models/: __init__.py  claim.py  decision.py  enums.py  knowledge.py  policy.py
src/claim_engine/monitoring/: __init__.py  edge_case_detector.py  metrics.py
src/claim_engine/pipeline/: __init__.py  claim_pipeline.py  lambda_handler.py
src/claim_engine/reasoning/: __init__.py  claude_client.py  prompt_templates.py  rag_reasoner.py
src/claim_engine/retrieval/: __init__.py  embeddings.py  retriever.py  vector_store.py
tests/: conftest.py  test_approval_engine.py  test_hipaa_redactor.py  test_pipeline.py  test_rag_reasoner.py  test_retrieval.py  test_rules_engine.py
